--- a/TodoApp/BlazorWebAssembly-Mongo/src/TodoApp.Application.Contracts/TodoApp.Application.Contracts.csproj
+++ b/TodoApp/BlazorWebAssembly-Mongo/src/TodoApp.Application.Contracts/TodoApp.Application.Contracts.csproj
@@ -12,13 +12,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Volo.Abp.ObjectExtending" Version="6.0.0-rc.2" />
-    <PackageReference Include="Volo.Abp.Account.Application.Contracts" Version="6.0.0-rc.2" />
-    <PackageReference Include="Volo.Abp.Identity.Application.Contracts" Version="6.0.0-rc.2" />
-    <PackageReference Include="Volo.Abp.PermissionManagement.Application.Contracts" Version="6.0.0-rc.2" />
-    <PackageReference Include="Volo.Abp.TenantManagement.Application.Contracts" Version="6.0.0-rc.2" />
-    <PackageReference Include="Volo.Abp.FeatureManagement.Application.Contracts" Version="6.0.0-rc.2" />
-    <PackageReference Include="Volo.Abp.SettingManagement.Application.Contracts" Version="6.0.0-rc.2" />
+    <PackageReference Include="Volo.Abp.ObjectExtending" Version="7.0.0" />
+    <PackageReference Include="Volo.Abp.Account.Application.Contracts" Version="7.0.0" />
+    <PackageReference Include="Volo.Abp.Identity.Application.Contracts" Version="7.0.0" />
+    <PackageReference Include="Volo.Abp.PermissionManagement.Application.Contracts" Version="7.0.0" />
+    <PackageReference Include="Volo.Abp.TenantManagement.Application.Contracts" Version="7.0.0" />
+    <PackageReference Include="Volo.Abp.FeatureManagement.Application.Contracts" Version="7.0.0" />
+    <PackageReference Include="Volo.Abp.SettingManagement.Application.Contracts" Version="7.0.0" />
   </ItemGroup>
 
 </Project>
