--- a/TodoApp/BlazorWebAssembly-Mongo/src/TodoApp.Application/TodoApp.Application.csproj
+++ b/TodoApp/BlazorWebAssembly-Mongo/src/TodoApp.Application/TodoApp.Application.csproj
@@ -3,7 +3,7 @@
   <Import Project="..\..\common.props" />
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <RootNamespace>TodoApp</RootNamespace>
   </PropertyGroup>
 
@@ -13,12 +13,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Volo.Abp.Account.Application" Version="6.0.0-rc.2" />
-    <PackageReference Include="Volo.Abp.Identity.Application" Version="6.0.0-rc.2" />
-    <PackageReference Include="Volo.Abp.PermissionManagement.Application" Version="6.0.0-rc.2" />
-    <PackageReference Include="Volo.Abp.TenantManagement.Application" Version="6.0.0-rc.2" />
-    <PackageReference Include="Volo.Abp.FeatureManagement.Application" Version="6.0.0-rc.2" />
-    <PackageReference Include="Volo.Abp.SettingManagement.Application" Version="6.0.0-rc.2" />
+    <PackageReference Include="Volo.Abp.Account.Application" Version="7.0.0" />
+    <PackageReference Include="Volo.Abp.Identity.Application" Version="7.0.0" />
+    <PackageReference Include="Volo.Abp.PermissionManagement.Application" Version="7.0.0" />
+    <PackageReference Include="Volo.Abp.TenantManagement.Application" Version="7.0.0" />
+    <PackageReference Include="Volo.Abp.FeatureManagement.Application" Version="7.0.0" />
+    <PackageReference Include="Volo.Abp.SettingManagement.Application" Version="7.0.0" />
   </ItemGroup>
 
 </Project>
