--- a/TodoApp/BlazorWebAssembly-Mongo/src/TodoApp.Domain.Shared/TodoApp.Domain.Shared.csproj
+++ b/TodoApp/BlazorWebAssembly-Mongo/src/TodoApp.Domain.Shared/TodoApp.Domain.Shared.csproj
@@ -9,14 +9,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Volo.Abp.Identity.Domain.Shared" Version="6.0.0-rc.2" />
-    <PackageReference Include="Volo.Abp.IdentityServer.Domain.Shared" Version="6.0.0-rc.2" />
-    <PackageReference Include="Volo.Abp.BackgroundJobs.Domain.Shared" Version="6.0.0-rc.2" />
-    <PackageReference Include="Volo.Abp.AuditLogging.Domain.Shared" Version="6.0.0-rc.2" />
-    <PackageReference Include="Volo.Abp.TenantManagement.Domain.Shared" Version="6.0.0-rc.2" />
-    <PackageReference Include="Volo.Abp.FeatureManagement.Domain.Shared" Version="6.0.0-rc.2" />
-    <PackageReference Include="Volo.Abp.PermissionManagement.Domain.Shared" Version="6.0.0-rc.2" />
-    <PackageReference Include="Volo.Abp.SettingManagement.Domain.Shared" Version="6.0.0-rc.2" />
+    <PackageReference Include="Volo.Abp.Identity.Domain.Shared" Version="7.0.0" />
+    <PackageReference Include="Volo.Abp.BackgroundJobs.Domain.Shared" Version="7.0.0" />
+    <PackageReference Include="Volo.Abp.AuditLogging.Domain.Shared" Version="7.0.0" />
+    <PackageReference Include="Volo.Abp.TenantManagement.Domain.Shared" Version="7.0.0" />
+    <PackageReference Include="Volo.Abp.FeatureManagement.Domain.Shared" Version="7.0.0" />
+    <PackageReference Include="Volo.Abp.PermissionManagement.Domain.Shared" Version="7.0.0" />
+    <PackageReference Include="Volo.Abp.SettingManagement.Domain.Shared" Version="7.0.0" />
+    <PackageReference Include="Volo.Abp.OpenIddict.Domain.Shared" Version="7.0.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -25,7 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="6.0.5" />
+    <PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="7.0.0" />
   </ItemGroup>
 
 </Project>
