--- a/TodoApp/BlazorWebAssembly-Mongo/src/TodoApp.Domain/TodoApp.Domain.csproj
+++ b/TodoApp/BlazorWebAssembly-Mongo/src/TodoApp.Domain/TodoApp.Domain.csproj
@@ -3,7 +3,7 @@
   <Import Project="..\..\common.props" />
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <RootNamespace>TodoApp</RootNamespace>
   </PropertyGroup>
 
@@ -12,16 +12,16 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Volo.Abp.Emailing" Version="6.0.0-rc.2" />
-    <PackageReference Include="Volo.Abp.Identity.Domain" Version="6.0.0-rc.2" />
-    <PackageReference Include="Volo.Abp.PermissionManagement.Domain.Identity" Version="6.0.0-rc.2" />
-    <PackageReference Include="Volo.Abp.IdentityServer.Domain" Version="6.0.0-rc.2" />
-    <PackageReference Include="Volo.Abp.PermissionManagement.Domain.IdentityServer" Version="6.0.0-rc.2" />
-    <PackageReference Include="Volo.Abp.BackgroundJobs.Domain" Version="6.0.0-rc.2" />
-    <PackageReference Include="Volo.Abp.AuditLogging.Domain" Version="6.0.0-rc.2" />
-    <PackageReference Include="Volo.Abp.TenantManagement.Domain" Version="6.0.0-rc.2" />
-    <PackageReference Include="Volo.Abp.FeatureManagement.Domain" Version="6.0.0-rc.2" />
-    <PackageReference Include="Volo.Abp.SettingManagement.Domain" Version="6.0.0-rc.2" />
+    <PackageReference Include="Volo.Abp.Emailing" Version="7.0.0" />
+    <PackageReference Include="Volo.Abp.Identity.Domain" Version="7.0.0" />
+    <PackageReference Include="Volo.Abp.PermissionManagement.Domain.Identity" Version="7.0.0" />
+    <PackageReference Include="Volo.Abp.BackgroundJobs.Domain" Version="7.0.0" />
+    <PackageReference Include="Volo.Abp.AuditLogging.Domain" Version="7.0.0" />
+    <PackageReference Include="Volo.Abp.TenantManagement.Domain" Version="7.0.0" />
+    <PackageReference Include="Volo.Abp.FeatureManagement.Domain" Version="7.0.0" />
+    <PackageReference Include="Volo.Abp.SettingManagement.Domain" Version="7.0.0" />
+    <PackageReference Include="Volo.Abp.OpenIddict.Domain" Version="7.0.0" />
+    <PackageReference Include="Volo.Abp.PermissionManagement.Domain.OpenIddict" Version="7.0.0" />
   </ItemGroup>
 
 </Project>
