--- a/TodoApp/BlazorWebAssembly-Mongo/src/TodoApp.HttpApi.Client/TodoApp.HttpApi.Client.csproj
+++ b/TodoApp/BlazorWebAssembly-Mongo/src/TodoApp.HttpApi.Client/TodoApp.HttpApi.Client.csproj
@@ -12,12 +12,17 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Volo.Abp.Account.HttpApi.Client" Version="6.0.0-rc.2" />
-    <PackageReference Include="Volo.Abp.Identity.HttpApi.Client" Version="6.0.0-rc.2" />
-    <PackageReference Include="Volo.Abp.PermissionManagement.HttpApi.Client" Version="6.0.0-rc.2" />
-    <PackageReference Include="Volo.Abp.TenantManagement.HttpApi.Client" Version="6.0.0-rc.2" />
-    <PackageReference Include="Volo.Abp.FeatureManagement.HttpApi.Client" Version="6.0.0-rc.2" />
-    <PackageReference Include="Volo.Abp.SettingManagement.HttpApi.Client" Version="6.0.0-rc.2" />
+    <PackageReference Include="Volo.Abp.Account.HttpApi.Client" Version="7.0.0" />
+    <PackageReference Include="Volo.Abp.Identity.HttpApi.Client" Version="7.0.0" />
+    <PackageReference Include="Volo.Abp.PermissionManagement.HttpApi.Client" Version="7.0.0" />
+    <PackageReference Include="Volo.Abp.TenantManagement.HttpApi.Client" Version="7.0.0" />
+    <PackageReference Include="Volo.Abp.FeatureManagement.HttpApi.Client" Version="7.0.0" />
+    <PackageReference Include="Volo.Abp.SettingManagement.HttpApi.Client" Version="7.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="**\*generate-proxy.json" />
+    <Content Remove="**\*generate-proxy.json" />
   </ItemGroup>
 
 </Project>
