--- a/TodoApp/BlazorWebAssembly-Mongo/src/TodoApp.HttpApi/TodoApp.HttpApi.csproj
+++ b/TodoApp/BlazorWebAssembly-Mongo/src/TodoApp.HttpApi/TodoApp.HttpApi.csproj
@@ -3,7 +3,7 @@
   <Import Project="..\..\common.props" />
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <RootNamespace>TodoApp</RootNamespace>
   </PropertyGroup>
 
@@ -12,12 +12,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Volo.Abp.Account.HttpApi" Version="6.0.0-rc.2" />
-    <PackageReference Include="Volo.Abp.Identity.HttpApi" Version="6.0.0-rc.2" />
-    <PackageReference Include="Volo.Abp.PermissionManagement.HttpApi" Version="6.0.0-rc.2" />
-    <PackageReference Include="Volo.Abp.TenantManagement.HttpApi" Version="6.0.0-rc.2" />
-    <PackageReference Include="Volo.Abp.FeatureManagement.HttpApi" Version="6.0.0-rc.2" />
-    <PackageReference Include="Volo.Abp.SettingManagement.HttpApi" Version="6.0.0-rc.2" />
+    <PackageReference Include="Volo.Abp.Account.HttpApi" Version="7.0.0" />
+    <PackageReference Include="Volo.Abp.Identity.HttpApi" Version="7.0.0" />
+    <PackageReference Include="Volo.Abp.PermissionManagement.HttpApi" Version="7.0.0" />
+    <PackageReference Include="Volo.Abp.TenantManagement.HttpApi" Version="7.0.0" />
+    <PackageReference Include="Volo.Abp.FeatureManagement.HttpApi" Version="7.0.0" />
+    <PackageReference Include="Volo.Abp.SettingManagement.HttpApi" Version="7.0.0" />
   </ItemGroup>
 
 </Project>
