--- a/TodoApp/BlazorWebAssembly-Mongo/src/TodoApp.MongoDB/TodoApp.MongoDB.csproj
+++ b/TodoApp/BlazorWebAssembly-Mongo/src/TodoApp.MongoDB/TodoApp.MongoDB.csproj
@@ -3,20 +3,20 @@
   <Import Project="..\..\common.props" />
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <RootNamespace>TodoApp</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\TodoApp.Domain\TodoApp.Domain.csproj" />
-    <PackageReference Include="Volo.Abp.PermissionManagement.MongoDB" Version="6.0.0-rc.2" />
-    <PackageReference Include="Volo.Abp.SettingManagement.MongoDB" Version="6.0.0-rc.2" />
-    <PackageReference Include="Volo.Abp.Identity.MongoDB" Version="6.0.0-rc.2" />
-    <PackageReference Include="Volo.Abp.IdentityServer.MongoDB" Version="6.0.0-rc.2" />
-    <PackageReference Include="Volo.Abp.BackgroundJobs.MongoDB" Version="6.0.0-rc.2" />
-    <PackageReference Include="Volo.Abp.AuditLogging.MongoDB" Version="6.0.0-rc.2" />
-    <PackageReference Include="Volo.Abp.TenantManagement.MongoDB" Version="6.0.0-rc.2" />
-    <PackageReference Include="Volo.Abp.FeatureManagement.MongoDB" Version="6.0.0-rc.2" />
+    <PackageReference Include="Volo.Abp.PermissionManagement.MongoDB" Version="7.0.0" />
+    <PackageReference Include="Volo.Abp.SettingManagement.MongoDB" Version="7.0.0" />
+    <PackageReference Include="Volo.Abp.Identity.MongoDB" Version="7.0.0" />
+    <PackageReference Include="Volo.Abp.BackgroundJobs.MongoDB" Version="7.0.0" />
+    <PackageReference Include="Volo.Abp.AuditLogging.MongoDB" Version="7.0.0" />
+    <PackageReference Include="Volo.Abp.TenantManagement.MongoDB" Version="7.0.0" />
+    <PackageReference Include="Volo.Abp.FeatureManagement.MongoDB" Version="7.0.0" />
+    <PackageReference Include="Volo.Abp.OpenIddict.MongoDB" Version="7.0.0" />
   </ItemGroup>
 
 </Project>
