--- a/TodoApp/BlazorWebAssembly-Mongo/test/TodoApp.HttpApi.Client.ConsoleTestApp/TodoApp.HttpApi.Client.ConsoleTestApp.csproj
+++ b/TodoApp/BlazorWebAssembly-Mongo/test/TodoApp.HttpApi.Client.ConsoleTestApp/TodoApp.HttpApi.Client.ConsoleTestApp.csproj
@@ -2,29 +2,31 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
     <None Remove="appsettings.json" />
-  </ItemGroup>
-
-  <ItemGroup>
     <Content Include="appsettings.json">
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <None Remove="appsettings.secrets.json" />
+    <Content Include="appsettings.secrets.json">
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Volo.Abp.Http.Client.IdentityModel" Version="6.0.0-rc.2" />
-    <PackageReference Include="Volo.Abp.Autofac" Version="6.0.0-rc.2" />
+    <PackageReference Include="Volo.Abp.Http.Client.IdentityModel" Version="7.0.0" />
+    <PackageReference Include="Volo.Abp.Autofac" Version="7.0.0" />
     <ProjectReference Include="..\..\src\TodoApp.HttpApi.Client\TodoApp.HttpApi.Client.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="7.0.0" />
   </ItemGroup>
 
 </Project>
