--- a/TodoApp/BlazorWebAssembly-Mongo/test/TodoApp.TestBase/TodoApp.TestBase.csproj
+++ b/TodoApp/BlazorWebAssembly-Mongo/test/TodoApp.TestBase/TodoApp.TestBase.csproj
@@ -3,24 +3,28 @@
   <Import Project="..\..\common.props" />
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <RootNamespace>TodoApp</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Volo.Abp.TestBase" Version="6.0.0-rc.2" />
-    <PackageReference Include="Volo.Abp.Autofac" Version="6.0.0-rc.2" />
-    <PackageReference Include="Volo.Abp.Authorization" Version="6.0.0-rc.2" />
+    <PackageReference Include="Volo.Abp.TestBase" Version="7.0.0" />
+    <PackageReference Include="Volo.Abp.Autofac" Version="7.0.0" />
+    <PackageReference Include="Volo.Abp.Authorization" Version="7.0.0" />
     <ProjectReference Include="..\..\src\TodoApp.Domain\TodoApp.Domain.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.1" />
-    <PackageReference Include="NSubstitute" Version="4.2.2" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.2.0" />
+    <PackageReference Include="NSubstitute" Version="4.3.0" />
+    <PackageReference Include="NSubstitute.Analyzers.CSharp" Version="1.0.15">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Shouldly" Version="4.0.3" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.extensibility.execution" Version="2.4.1" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5" />
   </ItemGroup>
 
 </Project>
