--- a/TodoApp/BlazorWebAssembly-Mongo/src/TodoApp.DbMigrator/appsettings.json
+++ b/TodoApp/BlazorWebAssembly-Mongo/src/TodoApp.DbMigrator/appsettings.json
@@ -3,7 +3,7 @@
     "Default": "mongodb://localhost:27017/TodoApp"
   },
   "OpenIddict": {
-    "Clients": {
+    "Applications": {
       "TodoApp_Web": {
         "ClientId": "TodoApp_Web",
         "ClientSecret": "1q2w3e*",
